feat(item-stock): add expiry table header

--- a/Views/ItemStockView.axaml
+++ b/Views/ItemStockView.axaml
@@ -181,6 +181,13 @@
                                     MinWidth="190"
                                     Header="Supplier"
                                     Binding="{CompiledBinding }" />
+                                
+                                <!-- Expiry -->
+                                <DataGridTextColumn
+                                    Width="Auto"
+                                    MinWidth="120"
+                                    Header="Expiry"
+                                    Binding="{CompiledBinding }" />
 
                                 <!-- Status -->
                                 <DataGridTextColumn
