--- a/Views/ManageMembershipView.axaml
+++ b/Views/ManageMembershipView.axaml
@@ -337,7 +337,7 @@
 							</DataGrid>
 						</StackPanel>
 					</shadui:Card>
-					<shadui:Card Grid.Column="1" Margin="7,30,0,29" VerticalAlignment="Top" Height="800">
+					<shadui:Card Grid.Column="1" Margin="7,30,0,29" VerticalAlignment="Top" MaxHeight="800">
 						<Grid RowDefinitions="Auto Auto Auto Auto">
 							<StackPanel Orientation="Vertical" Spacing="5" HorizontalAlignment="Center" VerticalAlignment="Center">
 								<shadui:Avatar
@@ -353,7 +353,8 @@
 									FontSize="15"
 									FontWeight="Medium"
 									Classes="Muted"
-									HorizontalAlignment="Center" />
+									HorizontalAlignment="Center"
+									IsVisible="{CompiledBinding HasSelectedMember}"/>
 							</StackPanel>
 							<StackPanel Grid.Row="1" Margin="0,10">
 								<shadui:Card>
@@ -372,7 +373,7 @@
 												HorizontalAlignment="Left"
 												VerticalAlignment="Center" />
 										</StackPanel>
-										<Grid RowDefinitions="Auto Auto">
+										<Grid RowDefinitions="Auto Auto" IsVisible="{CompiledBinding HasSelectedMember}">
 											<Grid Margin="20,20" ColumnDefinitions="* *">
 												<StackPanel HorizontalAlignment="Left" Grid.Column="0">
 													<TextBlock
@@ -444,7 +445,7 @@
 												HorizontalAlignment="Left"
 												VerticalAlignment="Center" />
 										</StackPanel>
-										<Grid RowDefinitions="Auto Auto">
+										<Grid RowDefinitions="Auto Auto" IsVisible="{CompiledBinding HasSelectedMember}">
 											<Grid Margin="20,20" ColumnDefinitions="* *">
 												<StackPanel HorizontalAlignment="Left" Grid.Column="0">
 													<TextBlock
@@ -533,7 +534,7 @@
 								</shadui:Card>
 							</StackPanel>
 							<StackPanel Grid.Row="3" HorizontalAlignment="Center">
-								<StackPanel Orientation="Horizontal" Spacing="10">
+								<StackPanel Orientation="Horizontal" Spacing="10" IsEnabled="{CompiledBinding HasSelectedMember}">
 									<Button
 										Classes="Destructive"
 										Padding="20,0,20,0"
